--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ MARIADB_DATABASE=codeduel
 AUTH_GITHUB_CLIENT_ID=xxxxxxxxxxxxxxxxxxxx
 AUTH_GITHUB_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 AUTH_GITHUB_CLIENT_CALLBACK_URL=http://localhost:5000/api/v1/auth/github/callback
+
+COOKIE_DOMAIN="localhost"
+COOKIE_PATH="/"
+COOKIE_HTTP_ONLY=true
+COOKIE_SECURE=false
+
+JWT_SECRET=secret
