update make file

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 BINARY_NAME=codeduel-be
 
-HOST=localhost
+HOST=127.0.0.1
 PORT=5000
 
-FRONTEND_URL=http://localhost:5173
-FRONTEND_URL_AUTH_CALLBACK=http://localhost:5173/login
+FRONTEND_URL=http://127.0.0.1:5173
+FRONTEND_URL_AUTH_CALLBACK=http://127.0.0.1:5173/login
 
 MARIADB_HOST=127.0.0.1
 MARIADB_PORT=3306
@@ -15,9 +15,9 @@ MARIADB_DATABASE=codeduel
 
 AUTH_GITHUB_CLIENT_ID=xxxxxxxxxxxxxxxxxxxx
 AUTH_GITHUB_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-AUTH_GITHUB_CLIENT_CALLBACK_URL=http://localhost:5000/api/v1/auth/github/callback
+AUTH_GITHUB_CLIENT_CALLBACK_URL=http://127.0.0.1:5000/api/v1/auth/github/callback
 
-COOKIE_DOMAIN="localhost"
+COOKIE_DOMAIN="127.0.0.1"
 COOKIE_PATH="/"
 COOKIE_HTTP_ONLY=true
 COOKIE_SECURE=false
