--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,7 @@ COOKIE_PATH="/"
 COOKIE_HTTP_ONLY=true
 COOKIE_SECURE=false
 
+SSL_KEY=ssl/server.key
+SSL_CERT=ssl/server.crt
+
 JWT_SECRET=secret
