added lobby endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,23 @@
 BINARY_NAME=codeduel-be
 
-HOST=127.0.0.1
-PORT=5000
+ENV=development
 
-FRONTEND_URL=http://127.0.0.1:5173
-FRONTEND_URL_AUTH_CALLBACK=http://127.0.0.1:5173/login
+HOST=0.0.0.0
+PORT=443
+PORT_HTTP=80
 
 MARIADB_HOST=127.0.0.1
 MARIADB_PORT=3306
 MARIADB_USER=root
 MARIADB_PASSWORD=toor
-
 MARIADB_DATABASE=codeduel
 
 AUTH_GITHUB_CLIENT_ID=xxxxxxxxxxxxxxxxxxxx
 AUTH_GITHUB_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 AUTH_GITHUB_CLIENT_CALLBACK_URL=http://127.0.0.1:5000/api/v1/auth/github/callback
+
+FRONTEND_URL=http://127.0.0.1:5173
+FRONTEND_URL_AUTH_CALLBACK=http://127.0.0.1:5173/login
 
 COOKIE_DOMAIN="127.0.0.1"
 COOKIE_PATH="/"
@@ -26,3 +28,4 @@ SSL_KEY=ssl/server.key
 SSL_CERT=ssl/server.crt
 
 JWT_SECRET=secret
+SERVICE_TOKEN=secret
