--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,11 @@ COOKIE_PATH="/"
 COOKIE_HTTP_ONLY=true
 COOKIE_SECURE=false
 
+CORS_ORIGIN=http://localhost:5173
+CORS_METHODS="GET,POST,PUT,DELETE"
+CORS_HEADERS="Content-Type, x-token, Accept, Content-Length, Accept-Encoding, Authorization,X-CSRF-Token"
+CORS_CREDENTIALS=true
+
 SSL_KEY=ssl/server.key
 SSL_CERT=ssl/server.crt
 
